--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
+    "build": "PUBLIC_URL=/swagger-theme-online/ node scripts/build.js",
     "test": "node scripts/test.js"
   },
   "eslintConfig": {
