--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-app-polyfill": "^1.0.6",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
+    "react-ga": "^3.1.2",
     "react-github-button": "^0.1.11",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
